--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ Bai10_KeyMatrix_LCD - Password Door/build/default/production/clock/simu_clock.o.
 Bai10_KeyMatrix_LCD - Password Door/build/default/production/i2c/i2c.o
 *.o
 *.o
+*.mp4
+TranNgocCat_1912750-DiepTranNam-1914213.zip
